[package]
name = "sandoo"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.135"
solana-client = "2.1.8"
solana-sdk = "2.1.8"
tokio = { version = "1.43.0", features = ["full"] }
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.23"
log = "0.4.17"